GenericSetup Product Changelog

  GenericSetup 1.3-beta (unreleased)

    - testing: The test base classes no longer set up any ZCML.
      This change is not backwards compatible. If you are using these base
      classes for testing custom handlers, you have to add the necessary ZCML
      setup and tear down. Using test layers is recommended.

    - Added support for importing/exporting Zope 3 component registries
      by folding in Hanno Schlichting's GSLocalAddons product.


  GenericSetup 1.2-beta (2006/09/20)

    - tool:  Added support for uploading a tarball on the "Import" tab
      (i.e., one produced on the export tab).

    - docs: Added SampleSite demo product.

    - ProfileRegistry: Added 'registerProfile' ZCML directive.
      Using the old registerProfile method in initialize() is now deprecated.
      See doc/profiles.txt for details.

    - ProfileRegistry: 'product' should now be the module name.
      For backwards compatibility 'product' is still first looked up in
      Products before searching the default module search path.

    - ZCTextIndex handler: Fixed 'indexed_attr' import.
      (http://www.zope.org/Collectors/CMF/436)

    - docs: Added 'Registering Profiles' section to profiles.txt.

    - Added support for PageTemplate import/export, modeled closely after
      existing PythonScript support

    - The dependency sorting was highly reliant on steps being added in the
      right order to work. If import step A depends on import step B which 
      depends on step C, and step C gets processed early, and they were 
      processed in the order A, C, B, then the dependency order would be 
      incorrect. This is now fixed by keeping tack of steps with unresolved
      dependencies, and trying again after inserting everything else.

  GenericSetup 1.1 (2006/04/16)

    - ZCatalog handler: Implemented the 'remove' directive for indexes.
      This allows to write extension profiles that remove or replace indexes.
