@@ -2,6 +2,10 @@ GenericSetup Product Changelog
 
   GenericSetup 1.3-beta (unreleased)
 
+    - No longer read the toolset xml and update the toolset regustry on
+      import context change.  Doing this only during the toolset step import
+      should be sufficient.
+
     - testing: The test base classes no longer set up any ZCML.
       This change is not backwards compatible. If you are using these base
       classes for testing custom handlers, you have to add the necessary ZCML
